[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/over.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/health.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Enemy" type="Position2D"]
script = ExtResource( 2 )
speed = 200

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -16.0
margin_top = -27.0
margin_right = 16.0
margin_bottom = -19.0
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.258824, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPositionBeforeEnd" type="Label" parent="."]
margin_left = -26.4922
margin_top = -42.7029
margin_right = 102.508
margin_bottom = -28.7029
text = "Position before end"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugTarget" type="Label" parent="."]
visible = false
margin_left = -22.0
margin_top = -59.0
margin_right = 18.0
margin_bottom = -45.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "TARGET"
__meta__ = {
"_edit_use_anchors_": false
}
